sample/ingress-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-echo-go
  namespace: default
  labels:
    app: my-echo-go
spec:
  selector:
    matchLabels:
      app: my-echo-go
  replicas: 1
  template:
    metadata:
      labels:
        app: my-echo-go
    spec:
      containers:
        - name: server
          image: azssi/my-echo-go
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-echo-go
  namespace: default
spec:
  selector:
    app: my-echo-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-echo-go
  namespace: default
spec:
  ingressClassName: private-nginx
  rules:
    - host: echo.nhn.cloudzmp.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-echo-go
                port:
                  number: 80
